--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -15,7 +15,18 @@
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
-
+  <div class="field">
+    <%= form.label :author%>
+    <%= form.text_field :author%>
+  </div>
+  <div class="field">
+    <%= form.label :publish_date%>
+    <%= form.date_field :publish_date%>
+  </div>
+  <div class="field">
+    <%= form.label :price%>
+    <%= form.number_field :price%>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
